Added Startup logic